add style to p.column and .centered

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,7 +3,7 @@ body{
 }
 .column{
   float: left;
-  width: 300px;
+  width: 230px;
   margin: auto;
   height: auto;
   border: 2px solid #000000;
@@ -11,11 +11,12 @@ body{
   padding: 15px;
   box-sizing:border-box;
   margin-left: 25px;
+  background-color: #808080;
 
 }
 img{
   margin: auto;
-  width: 50%;
+  width: 75%;
   display: block;
 }
 h4.centered{
@@ -24,4 +25,9 @@ h4.centered{
 .centered{
   text-align: center;
   font-size: 1.2em;
+}
+.column p{
+  color: #0000FF;
+  font-style: italic;
+  font-family: Arial;
 }
